keynote details added

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<p>Chiba University, Japan</p>
 						<div class="service-box col-lg-12 text-center">
 							<p><b style='color:red;'>Keynote title</b></p>
-							<p><b><i>To be Announced</i></b></p>
+							<p><b><i>"Development of AI Remote Sensing Technology and Applications for Disaster Resilience Society"</i></b></p>
 						</div>
 					</div>
 				</div>
@@ -231,27 +231,26 @@
 				</div>		
 		</div>							
 		</div>
-		<!-- <div class="container">
+		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading">Keynotes details</h2>
 						<div class="text-black text-left">
 							<ul>
-								<li><p><b>"Free-space gesture interaction through communication and sensing conversion":</b>Recent advances in RF-sensing have demonstrated that communication systems (e.g. WiFi, cellular, LoRa, Blue-tooth, etc.) may not only provide connectivity, but also sensing and environmental perception capabilities. Therefore, RF convergence - realizing sensing capabilities utilizing resources originally reserved for communication -  has gained attention as a potential solution to better utilize the available spectrum. The proposed designs target architectures where sensing and communication are co-designed at physical and Medium Access Control (MAC) layer.
-								Supported by edge intelligence, this enables new possibilities for free-space (gesture) interaction, activity recognition or localization and tracking in IoT-augmented smart computing environments. The talk will summarize recent developments in RF-sensing and highlight challenges and opportunities for interaction in the context of HCI.
+								<li><p>In his talk, <b>Prof. Josaphat Sumantyo</b> will introduce the development of unmanned aerial vehicles, aircraft, high altitude platform systems (HAPS), and microsatellite onboard multiband microwave sensors called circularly polarized synthetic aperture radar (CP-SAR) and their applications used AI for disaster and environmental monitoring to realize disaster resilience society. The development of this multiplatform CP-SAR includes the international research and education collaboration on microwave remote sensing that has been promoted by the Center for Environmental Remote Sensing of Chiba University for environmental and disaster monitoring since 2005. The international education in this research includes a double degree program, short/long stay programs, a world-class professor program, a visiting professor, a postdoctoral program under a Japanese governmental program, and overseas governments to promote high skills and knowledge on microwave remote sensing. We hope this research and education activities could boost the development of microwave remote sensors for future Earth and planetary missions.
 								<br></br>
-								<b>Stephan Sigg</b> is an Associate Professor at Aalto University in the Department of Information and Communications Engineering. He heads the Ambient Intelligence research group. Prior to Aalto University, he has worked in Germany and in Japan. Professor Sigg’s research is focused on the design, analysis and optimisation of (randomized) algorithms in Mobile and Pervasive Computing domains, in particular focusing on (wireless) networking and security. In recent years has worked on problems related to usable security, device-free human sensing, pro-active context computing, distributed adaptive beamforming, communication and Sensing convergence, and physical layer function computation.
+								<b>Josaphat Sumantyo</b> is a full professor at the Center for Environmental Remote Sensing (CEReS), Chiba University, Japan. He manages the Josaphat Microwave Remote Sensing Laboratory (JMRSL), where he develops microwave sensors and their applications, particularly the synthetic aperture radar (SAR) sensor for unmanned aerial vehicles (UAVs), aircraft, and microsatellites. He is a professional in developing leading techniques in remote sensing to observe continents, oceans, and the atmosphere using satellite data and remotely sensed devices.
 								</p></li>
-								<li><p><b>"Advancements in Mobile Computer Vision: Supersight Application and Its Real-World Use Cases":</b> The Supersight mobile application presents a revolutionary approach to the utilization of computer vision technology. It offers a streamlined method to collect and analyze people flow data, traditionally an expensive and complex undertaking. This talk will delve into how we've simplified the process with an easy-to-use mobile application and immediate deployment model, making it accessible for varied projects and requirements. We will explore different real-world applications where Supersight has shown significant impact. This includes analytics for business premises, event management, cargo container inspections, and real-time aircraft maintenance analytics. The objective is to demonstrate how innovations in computer vision can have direct and practical implications for industries and how these advancements can be harnessed for further research and applications.
+								<li><p><b>TBA.</b>
 								<br></br>
-								<b>Kimmo Pentikäinen</b> is a seasoned executive at Elisa Corporation, spearheading new business development and technology transformations. His current focus lies in the establishment of 5G business, with a diverse range of services such as 12K video, telepathology, and robotics. Kimmo has extensive experience in leveraging AI for internal processes, including mobile network operations and customer interactions. His previous leadership role in research saw him build a global network of over 1400 scientists.
+								<b>Chulhong Min</b> has joined the Pervasive Systems team at Nokia Bell Labs Cambridge on March 2017. He is currently working on edge AI systems and related challenges in the broader field of pervasive sensing. His research interests include mobile computing systems, mobile sensing, and Internet of Things (IoT). In 2016, he received his PhD in Computer Science from KAIST, Korea. Before joining Bell Labs, Chulhong was a postdoctoral researcher in School of Computing at KAIST, Korea. Chulhong enjoys building real, working systems and applications and likes to collaborate with other domain experts for interdisciplinary research.
 								</p></li>
 							</ul>
 						</div>
 				</div>
 			</div>
 		</div>
-		</div>-->
+		</div>
 	</section>
 
 	<section id="presenter–instructions">
