keynote details added – Chulhong

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 						<p>Nokia Bell Labs, Cambridge (UK)</p>
 						<div class="service-box col-lg-12 text-center">
 							<p><b style='color:red;'>Keynote title</b></p>
-							<p><b><i>To be Announced</i></b></p>
+							<p><b><i>"AI-Powered Evolution in Wearables with Multi-device, Multi-modal, Collaborative Systems"</i></b></p>
 						</div>
 					</div>
 				</div>		
@@ -241,9 +241,9 @@
 								<br></br>
 								<b>Josaphat Sumantyo</b> is a full professor at the Center for Environmental Remote Sensing (CEReS), Chiba University, Japan. He manages the Josaphat Microwave Remote Sensing Laboratory (JMRSL), where he develops microwave sensors and their applications, particularly the synthetic aperture radar (SAR) sensor for unmanned aerial vehicles (UAVs), aircraft, and microsatellites. He is a professional in developing leading techniques in remote sensing to observe continents, oceans, and the atmosphere using satellite data and remotely sensed devices.
 								</p></li>
-								<li><p><b>TBA.</b>
+								<li><p><b>The advent of tiny, ultra-low-power AI accelerators marks a significant milestone in the evolution of wearable technology. These tiny yet powerful devices are not only shrinking the physical boundaries of computing but are also redefining the scope of artificial intelligence (AI) on the body. Seamlessly integrated into wearable devices, they transform our bodies into networks of AI-powered processing units with various sensors, enabling next-generation wearable applications. In this talk, I will introduce a cutting-edge AI-native system designed for the on-the-fly collaboration of smart wearable devices equipped with these promising yet largely unexplored tiny, ultra-low-power AI accelerators.</b>
 								<br></br>
-								<b>Chulhong Min</b> has joined the Pervasive Systems team at Nokia Bell Labs Cambridge on March 2017. He is currently working on edge AI systems and related challenges in the broader field of pervasive sensing. His research interests include mobile computing systems, mobile sensing, and Internet of Things (IoT). In 2016, he received his PhD in Computer Science from KAIST, Korea. Before joining Bell Labs, Chulhong was a postdoctoral researcher in School of Computing at KAIST, Korea. Chulhong enjoys building real, working systems and applications and likes to collaborate with other domain experts for interdisciplinary research.
+								<b>Chulhong Min</b> is a principal research scientist at Nokia Bell Labs in Cambridge, UK, where he leads the Device Systems team. His current research explores next-generation sensory systems to realize transformative multi-modal, multi-device sensing for disruptive mobile, wearable, and IoT services. Broadly, his research interests include mobile and embedded systems, AI/ML, the Internet of Things (IoT), and human-computer interaction.
 								</p></li>
 							</ul>
 						</div>
