steeting commitee updated

--- a/index.html
+++ b/index.html
@@ -469,8 +469,9 @@
 					<ul>
 						<li><p><a href="https://raeng.org.uk/about-us/fellowship/new-fellows-2022/dr-mallikarjun-tatipamula-freng" target="_blank" rel="noopener noreferrer">Mallik Tatipamula, Ericsson</a></p></li>
 						<li><p><a href="https://www.cs.helsinki.fi/u/starkoma/" target="_blank" rel="noopener noreferrer">Sasu Tarkoma, University of Helsinki</a></p></li>
-						<li><p><a href="https://seng.hkust.edu.hk/about/people/faculty/brahim-bensaou" target="_blank" rel="noopener noreferrer">Brahim Bensaou, Hong Kong University of Sci & Tech</a></p></li>
+						<li><p><a href="https://seas.yale.edu/faculty-research/faculty-directory/leandros-tassiulas" target="_blank" rel="noopener noreferrer">Leandros Tassiulas, Yale University</a></p></li>
 						<li><p><a href="https://www.fahim-kawsar.net/" target="_blank" rel="noopener noreferrer">Fahim Kawsar, Nokia Bell Labs & University of Glasgow</a></p></li>
+						<li><p><a href="https://nxc.snu.ac.kr/" target="_blank" rel="noopener noreferrer">Kyunghan Lee, Seoul National University</a></p></li>
 					</ul>
 
 				</div>
