--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now <a href="https://netaisys24.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p> -->
 					<p class="text-black text-left">
+						<b style='color:darkgreen; font-size:24px;'>[February 23rd]</b> <b style='color:darkgreen; font-size:24px;'>Paper Submission Deadline: Saturday April 12th, 2025, AoE.</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[February 22nd]</b> <b style='color:darkgreen; font-size:24px;'>NetAISys '25 will be co-located with ACM MobiSys '25. See you in California!</b>
 					</p>
 					<!-- <p class="text-black text-left">
@@ -376,7 +379,7 @@
 						<h3>Submission Important Dates</h3>
 						<div class="text-black text-left">
 						  <ul>
-							<li><p>Submission Deadline: <b>Saturday April 12th, 2025, AoE [FIRM]</b></p></li>
+							<li><p>Submission Deadline: <b>Saturday April 12th, 2025, AoE</b></p></li>
 							<li><p>Notification of Acceptenace: <b>Friday April 25th, 2025, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b>Thursday May 1st, 2025, AoE [FIRM]</b></p></li>
 							<li><p>Workshop Date: <b style='color:red;'>Friday June 27, 2025</b></p></li>
