--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
 			</div>
 
 			<div class="container">
-			 <div class="col-lg-12 text-center">
-						<h2 class="section-heading">Programme & General Chairs</h2>
+			 <!--<div class="col-lg-12 text-center">
+						<h2 class="section-heading">General Chairs</h2>
 						<hr class="primary">
 			 </div>
 			 <div class="row text-black text-center">
@@ -495,21 +495,37 @@
 					</ul>
 
 				</div>
-			</div>
+			</div>-->
 
 		</div>
 		<div class="container">
 			 <div class="col-lg-12 text-center">
-						<h2 class="section-heading">Technical Program Committee (Work in Progress)</h2>
+						<h2 class="section-heading">Technical Program Committee (TPC) Chairs</h2>
 						<hr class="primary">
 			 </div>
 			 <div class="row text-black text-center">
 
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
-					<!--<ul>
+					<ul>
+						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Woojoong Kim, Pure Storage</a></p></li>
+				</div>
+			</div>
+
+		</div>
+		</div>
+		<div class="container">
+			 <div class="col-lg-12 text-center">
+						<h2 class="section-heading">TPC (Work in Progress)</h2>
+						<hr class="primary">
+			 </div>
+			 <div class="row text-black text-center">
+
+				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
+					<ul>
+						<!--<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
 						<li><p><a href="https://www.linkedin.com/in/sungjungk" target="_blank" rel="noopener noreferrer">Seong-Joong Kim, ETRI</a></p></li>
-						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
 						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Woojoong Kim, Intel Corporation</a></p></li>
