--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
 					</li> -->
 
 					<li>
+						<a class="page-scroll" href="#workshop-venue">Venue</a>
+					</li>
+
+					<li>
 						<a class="page-scroll" href="#organizers">Organizers</a>
 					</li>
 
@@ -418,7 +422,7 @@
 		</div>
 	</section>
 
-	
+
 	<section id="organizers">
 		<div class="container">
 			 <div class="col-lg-12 text-center">
