--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 					<hr class="light">
 
 					<p class="text-black text-left">
-						ACM MobiSys2025 and NetAISys '25 will take place at <b>Toramon Hill Forum</b>. Additional information about the confernece venue can be found <a href="https://www.sigmobile.org/mobisys/2025/venue/" target="_blank" rel="noopener noreferrer">here</a>.
+						ACM MobiSys2025 and NetAISys '25 will take place at <b>Hilton Anaheim</b>. Additional information about the confernece venue can be found <a href="https://www.sigmobile.org/mobisys/2025/venue/" target="_blank" rel="noopener noreferrer">here</a>.
 					</p>
 					<p>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6630.91449955069!2d-117.92058638820947!3d33.80051137314145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd7dddcf58695%3A0xb22b24c611781348!2sHilton%20Anaheim!5e0!3m2!1sen!2sfr!4v1740406261196!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
