--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
 						<li><p><a href="https://polese.io/" target="_blank" rel="noopener noreferrer">Michele Polese, Northeastern University</a></p></li>
 						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
+						<li><p><a href="https://www.su.se/english/profiles/prdo2937-1.742888" target="_blank" rel="noopener noreferrer">Praveen Kumar Donta, Stockholm University</a></p></li>
 						<li><p><a href="https://es.linkedin.com/in/michele-gucciardo-891bb85a" target="_blank" rel="noopener noreferrer">Michele Gucciardo, NEC</a></p></li>
 						<!--<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
