--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
 						<li><p><a href="https://www.su.se/english/profiles/prdo2937-1.742888" target="_blank" rel="noopener noreferrer">Praveen Kumar Donta, Stockholm University</a></p></li>
 						<li><p><a href="https://es.linkedin.com/in/michele-gucciardo-891bb85a" target="_blank" rel="noopener noreferrer">Michele Gucciardo, NEC</a></p></li>
 						<li><p><a href="https://tong89.github.io/tongli.github.io/" target="_blank" rel="noopener noreferrer">Tong Li, Tsinghua University</a></p></li>
+						<li><p><a href="http://cnd.iit.cnr.it/lorenzo/" target="_blank" rel="noopener noreferrer">Lorenzo Valerio, IIT-CNR</a></p></li>
 						<!--<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
 						<li><p><a href="https://www.linkedin.com/in/sungjungk" target="_blank" rel="noopener noreferrer">Seong-Joong Kim, ETRI</a></p></li>
