--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			<div class="header-content-inner">
 				<h1 style="color:red;">International Workshop on Networked AI Systems</h1>
 				<hr>
-				<p style="color:midnightblue; font-size: 40px;">Co-Located with ACM MobiSys 2025<br>June 27, 2025. Anaheim, California, United States</p>
+				<p style="color:black; font-size: 40px;">Co-Located with ACM MobiSys 2025<br>June 27, 2025. Anaheim, California, United States</p>
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
 			</div>
 		</div>
