hotcrp online fix

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now <a href="https://netaisys24.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p> -->
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:24px;'>[March 7th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '25 paper submission system is now <a href="https://netaisys25.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
+						<b style='color:darkgreen; font-size:24px;'>[March 7th]</b> <b style='color:darkblue; font-size:24px;'>The NetAISys '25 paper submission system is now <a href="https://netaisys25.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p> 
 					<p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[February 23rd]</b> <b style='color:darkgreen; font-size:24px;'>Paper Submission Deadline: Saturday April 12th, 2025, AoE.</b>
