--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
 						<li><p><a href="http://cnd.iit.cnr.it/lorenzo/" target="_blank" rel="noopener noreferrer">Lorenzo Valerio, IIT-CNR</a></p></li>
 						<li><p><a href="https://sc.cs.univie.ac.at/team/person/115053/" target="_blank" rel="noopener noreferrer">Atakan Aral, University of Vienna</a></p></li>
 						<li><p><a href="https://ece.princeton.edu/people/su-henry-wang" target="_blank" rel="noopener noreferrer">Su Henry Wang, Princeton University</a></p></li>
+						<li><p><a href="https://www.nokia.com/people/sangwon-choi/" target="_blank" rel="noopener noreferrer">Sangwon Choi, Nokia Bell Labs</a></p></li>
 						<!--<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
 						<li><p><a href="https://www.linkedin.com/in/sungjungk" target="_blank" rel="noopener noreferrer">Seong-Joong Kim, ETRI</a></p></li>
