--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
 						<img class="img-circle" src="./img/organizers/jang.png" alt="Rounded image" width="150" height="150">
-						<h2><a href="https://siyoungjang.github.io/" target="_blank" rel="noopener noreferrer">SiYoung Jang</a></h2>
+						<h2><a href="https://www.linkedin.com/in/siyoungjang/" target="_blank" rel="noopener noreferrer">SiYoung Jang</a></h2>
 						<p>Nokia Bell Labs</p>
 					</div>
 
