--- a/index.html
+++ b/index.html
@@ -462,6 +462,14 @@
 
 				</div>
 
+				<div class="col-lg-4 text-center">
+					<div class="service-box">
+						<img class="img-circle" src="./img/organizers/banerjee-small.jpg" alt="Rounded image" width="150" height="150">
+						<h2><a href="https://pages.cs.wisc.edu/~suman/" target="_blank" rel="noopener noreferrer">Suman Banerjee</a></h2>
+						<p>University of Wisconsin-Madison</p>
+					</div>
+
+				</div>
 				
 		</div>
 	
@@ -513,10 +521,11 @@
 			 </div>
 			 <div class="row text-black text-center">
 
-				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
+				<div class="col-lg-12 col-lg-offset-1 text-left">
 					<ul>
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Woojoong Kim, Pure Storage</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Tingjun Chen, Duke University</a></p></li>
 				</div>
 			</div>
 
