--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 						<h3>Submission Important Dates</h3>
 						<div class="text-black text-left">
 						  <ul>
-							<li><p>Submission Deadline: <b>Saturday April 12th, 2025, AoE</b></p></li>
+							<li><p>Submission Deadline: <b>Saturday April 19th, 2025, AoE [FIRM]</b></p></li>
 							<li><p>Notification of Acceptenace: <b>Friday April 25th, 2025, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b>Thursday May 1st, 2025, AoE [FIRM]</b></p></li>
 							<li><p>Workshop Date: <b style='color:red;'>Friday June 27, 2025</b></p></li>
