--- a/index.html
+++ b/index.html
@@ -561,33 +561,8 @@
 						<li><p><a href="https://sc.cs.univie.ac.at/team/person/115053/" target="_blank" rel="noopener noreferrer">Atakan Aral, University of Vienna</a></p></li>
 						<li><p><a href="https://ece.princeton.edu/people/su-henry-wang" target="_blank" rel="noopener noreferrer">Su Henry Wang, Princeton University</a></p></li>
 						<li><p><a href="https://www.nokia.com/people/sangwon-choi/" target="_blank" rel="noopener noreferrer">Sangwon Choi, Nokia Bell Labs</a></p></li>
-						<!--<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
-						<li><p><a href="https://www.linkedin.com/in/sungjungk" target="_blank" rel="noopener noreferrer">Seong-Joong Kim, ETRI</a></p></li>
-						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
-						<li><p><a href="https://www.linkedin.com/in/%ED%98%84%EC%9A%B0-%EC%9D%B4-366039ba" target="_blank" rel="noopener noreferrer">Hyunwoo Lee, KENTECH</a></p></li>
-						<li><p><a href="hhttps://linkedin.com/in/byoungheon-shin" target="_blank" rel="noopener noreferrer">Byoungheon Shin, Samsung Electronics</a></p></li>
-						<li><p><a href="http://cnd.iit.cnr.it/lorenzo/" target="_blank" rel="noopener noreferrer">Lorenzo Valerio, IIT-CNR</a></p></li>
-
-						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
-						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, Aalto University</a></p></li>
-						<li><p><a href="https://seng.hkust.edu.hk/about/people/faculty/brahim-bensaou" target="_blank" rel="noopener noreferrer">Brahim Bensaou, Hong Kong Uni of Sci and Tech</a></p></li>
-						<li><p><a href="https://cs.nju.edu.cn/tianchen/index.htm" target="_blank" rel="noopener noreferrer">Chen Tian, Nanjing University</a></p></li>
-						<li><p><a href="https://www.intsys-lab.com/#/people" target="_blank" rel="noopener noreferrer">Linlin You, Sun Yat-sen University</a></p></li>
-
-					</ul> -->	
-						<!--
-						<li><p><a href="https://aveith.github.io/" target="_blank" rel="noopener noreferrer">Alexandre da Silva Veith, Nokia Bell Labs</a></p></li>
-						<li><p><a href="https://fi.linkedin.com/in/antonino-orsino-035b0633" target="_blank" rel="noopener noreferrer">Antonino Orsino, Ericsson</a></p></li>
-						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
-						<li><p><a href="https://scholar.google.com/citations?user=MDI5a9IAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Claudia Campolo, Università Mediterranea di Reggio Calabria</a></p></li>
-						<li><p><a href="https://scholar.google.co.kr/citations?user=VHuU14AAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Abhishek Kumar, University of Oulu</a></p></li>
-						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
-
-						<li><p><a href="https://kr.linkedin.com/in/si-young-jang-bb336457" target="_blank" rel="noopener noreferrer">Si-Young Jang, Nokia Bell Labs</a></p></li>
-						<li><p><a href="https://sites.google.com/view/professorflaviadelicato/home" target="_blank" rel="noopener noreferrer">Flavia Delicato, Fluminense Federal University</a></p></li>
-						<li><p><a href="https://jspencer.org/" target="_blank" rel="noopener noreferrer">Jonathan Spencer, Waymo</a></p></li>
-						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li> -->
+						<li><p><a href="https://sites.google.com/site/jayachampati" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, University of Victoria</a></p></li>
 					<!--<p><i><b>TPC member list currently being updated.</b> Interested in joining the Technical Program Committee? Please reach out to the <a href="#organizers">organizers</a>.</i></p>-->
 
 				</div>
